translate appearance and bgm

--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
 
 </tbody></table>
 <p>
-<b>原生种-阿露菲米（Einst Alfimi）</b>是<a href="http://superrobotwars.wikia.com/wiki/Excellen_Browning" title="Excellen Browning">艾克塞琳-勃朗宁（Excellen Browning）</a>的克隆，也是唯一的人类<a href="http://superrobotwars.wikia.com/wiki/Einst" title="Einst">原生种（Einst）</a>。她第一次登场是在《超级机器人大战 Impact》。一般情况下，驾驶座机为「<a href="http://superrobotwars.wikia.com/wiki/Pers%C3%B6nlichkeit" title="Persönlichkeit">魂之座（Persönlichkeit）</a>」。
+<b>原生种-阿露菲米（Einst Alfimi）</b>是<a href="http://superrobotwars.wikia.com/wiki/Excellen_Browning" title="Excellen Browning">艾克塞琳-勃朗宁</a>的克隆，也是唯一的人类<a href="http://superrobotwars.wikia.com/wiki/Einst" title="Einst">原生种</a>。她第一次登场是在《超级机器人大战 Impact》。一般情况下，驾驶座机为「<a href="http://superrobotwars.wikia.com/wiki/Pers%C3%B6nlichkeit" title="Persönlichkeit">魂之座</a>」。
 </p>
-<h2><span class="mw-headline" id="Appearences">Appearences</span></h2>
-<ul><li><a href="/wiki/Super_Robot_Wars_Impact?action=edit&amp;redlink=1" class="new" title="Super Robot Wars Impact (page does not exist)">Super Robot Wars Impact</a> - Non-playable enemy character → Playable character
-</li><li><a href="/wiki/Super_Robot_Wars_Original_Generation_2" title="Super Robot Wars Original Generation 2">Super Robot Wars Original Generation 2</a> - Non-playable enemy character → Playable character
-</li><li><a href="/wiki/Super_Robot_Wars_Original_Generations" title="Super Robot Wars Original Generations">Super Robot Wars Original Generations</a> - Non-playable enemy character → Playable character
-</li><li><a href="/wiki/Super_Robot_Wars_Original_Generation_Gaiden" title="Super Robot Wars Original Generation Gaiden">Super Robot Wars Original Generation Gaiden</a> - Playable character
-</li><li><a href="/wiki/Super_Robot_Wars_OG_Saga:_Endless_Frontier_EXCEED" title="Super Robot Wars OG Saga: Endless Frontier EXCEED">Super Robot Wars OG Saga: Endless Frontier EXCEED</a> - Playable character
-</li><li><a href="/wiki/2nd_Super_Robot_Wars_Original_Generation" title="2nd Super Robot Wars Original Generation">2nd Super Robot Wars Original Generation</a> - Playable character
+<h2><span class="mw-headline" id="Appearences">登场作品</span></h2>
+<ul><li><a href="/wiki/Super_Robot_Wars_Impact?action=edit&amp;redlink=1" class="new" title="Super Robot Wars Impact (page does not exist)">超级机器人大战 Impact</a> - 敌方 NPC → 我方角色
+</li><li><a href="/wiki/Super_Robot_Wars_Original_Generation_2" title="Super Robot Wars Original Generation 2">超级机器人大战 OG2</a> - 敌方 NPC → 我方角色
+</li><li><a href="/wiki/Super_Robot_Wars_Original_Generations" title="Super Robot Wars Original Generations">超级机器人大战 OGS</a> - 敌方 NPC → 我方角色
+</li><li><a href="/wiki/Super_Robot_Wars_Original_Generation_Gaiden" title="Super Robot Wars Original Generation Gaiden">超级机器人大战 OG 外传</a> - 我方角色
+</li><li><a href="/wiki/Super_Robot_Wars_OG_Saga:_Endless_Frontier_EXCEED" title="Super Robot Wars OG Saga: Endless Frontier EXCEED">超级机器人大战 OG 传说: 无限边境 EXCEED</a> - 我方角色
+</li><li><a href="/wiki/2nd_Super_Robot_Wars_Original_Generation" title="2nd Super Robot Wars Original Generation">第二次超级机器人大战 OG</a> - 我方角色
 </li></ul>
-<h2><span class="mw-headline" id="Themes">Themes</span></h2>
-<p><i>Alchemist with a wavering heart</i> (Localised <i>Alchemist's Query</i>) - Default theme is all appearences.
+<h2><span class="mw-headline" id="Themes">主题音乐</span></h2>
+<p><i>内心动摇的炼金术师</i> (<i>揺れる心の錬金術師</i> / <i>Alchemist's Query</i>) - 所有出场的默认主题音乐。
 </p>
 <h2><span class="mw-headline" id="Personality_and_traits">Personality and traits</span></h2>
 <p>Alfimi is shown to be in love with <a href="/wiki/Kyosuke_Nanbu" title="Kyosuke Nanbu">Kyosuke Nanbu</a> and feels that Excellen Browning is somewhat related with her, as she was a clone of Excellen. Her personality was about the same as Excellen, being rather playful and fun-loving. However, she's unwaveringly loyal to the Einst until Kyosuke and Excellen convinced Alfimi to help them and look towards their future. She frequently speaks in a way which makes little sense to other people and doesn't finish her thoughts.
