--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
 
 					<div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr mw-content-text"><table class="infobox" style="width: 22em; font-size: 88%; text-align: left;">
 <tbody><tr>
-<th colspan="2" style="background: lightsteelblue; color: #000; font-size: 120%; text-align: center;"> Einst Alfimi
+<th colspan="2" style="background: lightsteelblue; color: #000; font-size: 120%; text-align: center;"> 原生种-阿露菲米
 </th></tr>
 <tr>
-<td colspan="2" style="text-align: center;"> <i>Super Robot Wars Impact</i> character
+<td colspan="2" style="text-align: center;"> <i>超级机器人大战 Impact</i> 中的角色
 </td></tr>
 <tr>
 <td style="text-align: center;" colspan="2"> <a href="res/alfimi.jpg" class="image image-thumbnail"><img src="res/alfimi.jpg" alt="Alfimi" class="" data-image-key="Alfimi.jpg" data-image-name="Alfimi.jpg" width="300" height="385"></a>
 </td></tr>
 <tr>
-<th colspan="2" style="background: lightsteelblue; color: #000; font-size: 120%; text-align: center;"> Profile
+<th colspan="2" style="background: lightsteelblue; color: #000; font-size: 120%; text-align: center;"> 个人档案
 </th></tr>
 <tr>
-<th> Gender
-</th><td>Female
+<th> 性别
+</th><td>女
 </td></tr>
 <tr>
-<th> Species
-</th><td>Einst-Human hybrid
+<th> 种族
+</th><td>原生种-人类混合
 </td></tr>
 <tr>
-<th> Known relatives
-</th><td><a href="/wiki/Excellen_Browning" title="Excellen Browning">Excellen Browning</a> (Origin)
+<th> 已知的相关人物
+</th><td><a href="/wiki/Excellen_Browning" title="Excellen Browning">艾克塞琳-勃朗宁</a>（原型）
 </td></tr>
 <tr>
-<th colspan="2" style="background: lightsteelblue; color: #000; font-size: 120%; text-align: center;"> Military History
+<th colspan="2" style="background: lightsteelblue; color: #000; font-size: 120%; text-align: center;"> 战斗资料
 </th></tr>
 <tr>
-<th> Units Piloted
-</th><td><a href="/wiki/Pers%C3%B6nlichkeit" title="Persönlichkeit">Persönlichkeit</a>
+<th> 驾驶座机
+</th><td><a href="/wiki/Pers%C3%B6nlichkeit" title="Persönlichkeit">魂之座</a>
 </td></tr>
 
 
@@ -117,7 +117,7 @@
 </li><li><a href="/wiki/2nd_Super_Robot_Wars_Original_Generation" title="2nd Super Robot Wars Original Generation">第二次超级机器人大战 OG</a> - 我方角色
 </li></ul>
 <h2><span class="mw-headline" id="Themes">主题音乐</span></h2>
-<p><i>内心动摇的炼金术师</i> (<i>揺れる心の錬金術師</i> / <i>Alchemist's Query</i>) - 所有出场的默认主题音乐。
+<p><i>内心动摇的炼金术师</i>（<i>揺れる心の錬金術師</i> / <i>Alchemist's Query</i>）- 所有出场的默认主题音乐。
 </p>
 <h2><span class="mw-headline" id="Personality_and_traits">Personality and traits</span></h2>
 <p>Alfimi is shown to be in love with <a href="/wiki/Kyosuke_Nanbu" title="Kyosuke Nanbu">Kyosuke Nanbu</a> and feels that Excellen Browning is somewhat related with her, as she was a clone of Excellen. Her personality was about the same as Excellen, being rather playful and fun-loving. However, she's unwaveringly loyal to the Einst until Kyosuke and Excellen convinced Alfimi to help them and look towards their future. She frequently speaks in a way which makes little sense to other people and doesn't finish her thoughts.
