--- a/index.html
+++ b/index.html
@@ -139,5 +139,7 @@ Expensive parser function count: 0/100
 				</div>
 			</div>
 		</article><!-- WikiaMainContent -->
+		<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'alfimi.tk', 'user' : 1175617, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-08-03', 'lang' : 'zh', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/a1e11f041"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/alfimi.tk-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+
 	</div>
 </section><!--WikiaPage-->
