--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 	}
 
 </style>
+<!-- Google analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55878990-6', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <title>阿露菲米的 Wiki</title>
 
 <!-- CSS injected by skin and extensions -->
