--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 <title>阿露菲米的 Wiki</title>
 
 <!-- CSS injected by skin and extensions -->
-<link rel="stylesheet" href="css/Qualaroo.scss"><style>a:lang(ar),a:lang(ckb),a:lang(fa),a:lang(kk-arab),a:lang(mzn),a:lang(ps),a:lang(ur){text-decoration:none}a.new,#quickbar a.new{color:#ba0000}
+<link rel="stylesheet" href="css/Qualaroo.scss">
+<style>
+a:lang(ar),a:lang(ckb),a:lang(fa),a:lang(kk-arab),a:lang(mzn),a:lang(ps),a:lang(ur){text-decoration:none;}a.new,#quickbar a.new{color:#ba0000;}
+</style>
 
-/* cache key: superrobotwars:resourceloader:filter:minify-css:7:c88e2bcd56513749bec09a7e29cb3ffa */</style>
-
-<style type="text/css" media="all">.mw-collapsible-toggle{float:right} li .mw-collapsible-toggle{float:none} .mw-collapsible-toggle-li{list-style:none}
+<style type="text/css" media="all">.mw-collapsible-toggle{float:right} li .mw-collapsible-toggle{float:none} .mw-collapsible-toggle-li{list-style:none;}
 
 /* cache key: slot1:resourceloader:filter:minify-css:7:4250852ed2349a0d4d0fc6509a3e7d4c */
 
@@ -39,7 +40,7 @@
 
 /* cache key: slot1:resourceloader:filter:minify-css:7:4250852ed2349a0d4d0fc6509a3e7d4c */
 
-.js-messagebox{margin:1em 5%;padding:0.5em 2.5%;border:1px solid #ccc;background-color:#fcfcfc;font-size:0.8em}.js-messagebox .js-messagebox-group{margin:1px;padding:0.5em 2.5%;border-bottom:1px solid #ddd}.js-messagebox .js-messagebox-group:last-child{border-bottom:thin none transparent}
+.js-messagebox{margin:1em 5%;padding:0.5em 2.5%;border:1px solid #ccc;background-color:#fcfcfc;font-size:0.8em}.js-messagebox .js-messagebox-group{margin:1px;padding:0.5em 2.5%;border-bottom:1px solid #ddd}.js-messagebox .js-messagebox-group:last-child{border-bottom:thin none transparent;}
 
 /* cache key: slot1:resourceloader:filter:minify-css:7:8b08bdc91c52a9ffba396dccfb5b473c */</style><meta name="ResourceLoaderDynamicStyles"></head>
 <body class="mediawiki ltr ns-0 ns-subject page-Einst_Alfimi  TOC_hide oasis-breakpoints wikinav2 skin-oasis  user-anon background-not-tiled background-dynamic"><div id="mw-js-message" class="js-messagebox" style="display: none;"></div>
@@ -138,9 +139,9 @@
 <p><i>内心动摇的炼金术师</i>（<i>揺れる心の錬金術師</i> / <i>Alchemist's Query</i>）- 所有出场的默认主题音乐。
 </p>
 <h2><span class="mw-headline" id="Personality_and_traits">Personality and traits</span></h2>
-<p>看得出阿露菲米爱上了<a href="/wiki/Kyosuke_Nanbu" title="Kyosuke Nanbu">南部响介</a>，并能够感受到自己和艾克塞琳存在着某些关联，这是因为她其实是艾克塞琳的克隆。她的个性和艾克塞琳很像，很爱玩，爱开玩笑。然而，她却对坚定地忠于原生种，直到响介和艾克塞琳说服她加入，帮助他们，并一起展望他们的未来。阿露菲米时常会说一些让人听不懂的话，她也没有形成一个完整的世界观。
-</p><p>During their final battle against the Einst, Kyosuke and Excellen managed to get Alfimi to switch sides. However, she could not survive outside her Personlichkeit after the head of the Einst was defeated and faded away along with the other Einst as she was a part of them. This prompted Excellen to change her mind in regards to having children, saying that she wanted female twins, one named Lemon and the other disclosed. Kyosuke then successfully assumed that her name would be Alfimi.
-</p><p>But Alfimi's spirit proved to be stronger than anyone expected. Clinging to life, she found the drifting <a href="/wiki/Axel_Almer" title="Axel Almer">Axel Almer</a> and merged with his soul, until she was able to regenerate her body. As the Jetzt emerged, Alfimi recreated the Personlichkeit and rejoined the battle to put them down. After the battle with the Shura, Alfimi decided to stay with Axel. Shortly afterwards, she was attacked by a mysterious creature, and the two of them end up in the Endless Frontier, where they encountered <a href="/wiki/Haken_Browning" title="Haken Browning">Haken Browning</a> and his group, more Shura, and the remnants of the Einst.
+<p>看得出阿露菲米爱上了<a href="/wiki/Kyosuke_Nanbu" title="Kyosuke Nanbu">南部响介</a>，并能够感受到自己和艾克塞琳存在着某些关联，这是因为她其实是艾克塞琳的克隆。她的个性和艾克塞琳很像，很爱玩，爱开玩笑。然而，她却对坚定地忠于原生种，直到响介和艾克塞琳说服她加入，帮助他们，并一起展望他们的未来。阿露菲米时常会说一些让人听不懂的话，她也没有形成一个完整的世界观。</p>
+<p>在与原生种的最终决战中，响介和艾克塞琳成功策反了阿露菲米。然而阿露菲米无法离开魂之座而生存，所以在原生种头目被击败后，她只能和其他原生种一起毁灭。这促使了艾克塞琳以后和响介生孩子的想法，她说想要一对女双胞胎，其中一个叫雷蒙；当要说另一个时，响介成功猜到了她会取名阿露菲米。</p>
+<p>But Alfimi's spirit proved to be stronger than anyone expected. Clinging to life, she found the drifting <a href="/wiki/Axel_Almer" title="Axel Almer">Axel Almer</a> and merged with his soul, until she was able to regenerate her body. As the Jetzt emerged, Alfimi recreated the Personlichkeit and rejoined the battle to put them down. After the battle with the Shura, Alfimi decided to stay with Axel. Shortly afterwards, she was attacked by a mysterious creature, and the two of them end up in the Endless Frontier, where they encountered <a href="/wiki/Haken_Browning" title="Haken Browning">Haken Browning</a> and his group, more Shura, and the remnants of the Einst.
 </p><p>With the help of <a href="/wiki/Kouta_Azuma?action=edit&amp;redlink=1" class="new" title="Kouta Azuma (page does not exist)">Kouta Azuma</a>, Alfimi and Axel managed to make it back to Earth, where she was targeted by Duvan Org, who wished to assimilate Alfimi and the Personlichkeit unto the Jetzt core that powered his Alles Geist.
 </p>
 <!--
