--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@ a:lang(ar),a:lang(ckb),a:lang(fa),a:lang(kk-arab),a:lang(mzn),a:lang(ps),a:lang(
 <b>原生种-阿露菲米（Einst Alfimi）</b>是<a href="http://superrobotwars.wikia.com/wiki/Excellen_Browning" title="Excellen Browning">艾克塞琳-勃朗宁</a>的克隆，也是唯一的人类<a href="http://superrobotwars.wikia.com/wiki/Einst" title="Einst">原生种</a>。她第一次登场是在《超级机器人大战 Impact》。一般情况下，驾驶座机为「<a href="http://superrobotwars.wikia.com/wiki/Pers%C3%B6nlichkeit" title="Persönlichkeit">魂之座</a>」。
 </p>
 <h2><span class="mw-headline" id="Appearences">登场作品</span></h2>
-<ul><li><a href="/wiki/Super_Robot_Wars_Impact?action=edit&amp;redlink=1" class="new" title="Super Robot Wars Impact (page does not exist)">超级机器人大战 Impact</a> - 敌方 NPC → 我方角色
-</li><li><a href="/wiki/Super_Robot_Wars_Original_Generation_2" title="Super Robot Wars Original Generation 2">超级机器人大战 OG2</a> - 敌方 NPC → 我方角色
-</li><li><a href="/wiki/Super_Robot_Wars_Original_Generations" title="Super Robot Wars Original Generations">超级机器人大战 OGS</a> - 敌方 NPC → 我方角色
-</li><li><a href="/wiki/Super_Robot_Wars_Original_Generation_Gaiden" title="Super Robot Wars Original Generation Gaiden">超级机器人大战 OG 外传</a> - 我方角色
-</li><li><a href="/wiki/Super_Robot_Wars_OG_Saga:_Endless_Frontier_EXCEED" title="Super Robot Wars OG Saga: Endless Frontier EXCEED">超级机器人大战 OG 传说: 无限边境 EXCEED</a> - 我方角色
-</li><li><a href="/wiki/2nd_Super_Robot_Wars_Original_Generation" title="2nd Super Robot Wars Original Generation">第二次超级机器人大战 OG</a> - 我方角色
+<ul><li><a href="http://superrobotwars.wikia.com/wiki/Super_Robot_Wars_Impact?action=edit&amp;redlink=1" class="new" title="Super Robot Wars Impact (page does not exist)">超级机器人大战 Impact</a> - 敌方 NPC → 我方角色
+</li><li><a href="http://superrobotwars.wikia.com/wiki/Super_Robot_Wars_Original_Generation_2" title="Super Robot Wars Original Generation 2">超级机器人大战 OG2</a> - 敌方 NPC → 我方角色
+</li><li><a href="http://superrobotwars.wikia.com/wiki/Super_Robot_Wars_Original_Generations" title="Super Robot Wars Original Generations">超级机器人大战 OGS</a> - 敌方 NPC → 我方角色
+</li><li><a href="http://superrobotwars.wikia.com/wiki/Super_Robot_Wars_Original_Generation_Gaiden" title="Super Robot Wars Original Generation Gaiden">超级机器人大战 OG 外传</a> - 我方角色
+</li><li><a href="http://superrobotwars.wikia.com/wiki/Super_Robot_Wars_OG_Saga:_Endless_Frontier_EXCEED" title="Super Robot Wars OG Saga: Endless Frontier EXCEED">超级机器人大战 OG 传说: 无限边境 EXCEED</a> - 我方角色
+</li><li><a href="http://superrobotwars.wikia.com/wiki/2nd_Super_Robot_Wars_Original_Generation" title="2nd Super Robot Wars Original Generation">第二次超级机器人大战 OG</a> - 我方角色
 </li></ul>
 <h2><span class="mw-headline" id="Themes">主题音乐</span></h2>
 <p><i>内心动摇的炼金术师</i>（<i>揺れる心の錬金術師</i> / <i>Alchemist's Query</i>）- 所有出场的默认主题音乐。
 </p>
 <h2><span class="mw-headline" id="Personality_and_traits">Personality and traits</span></h2>
-<p>看得出阿露菲米爱上了<a href="/wiki/Kyosuke_Nanbu" title="Kyosuke Nanbu">南部响介</a>，并能够感受到自己和艾克塞琳存在着某些关联，这是因为她其实是艾克塞琳的克隆。她的个性和艾克塞琳很像，很爱玩，爱开玩笑。然而，她却对坚定地忠于原生种，直到响介和艾克塞琳说服她加入，帮助他们，并一起展望他们的未来。阿露菲米时常会说一些让人听不懂的话，她也没有形成一个完整的世界观。</p>
+<p>看得出阿露菲米爱上了<a href="http://superrobotwars.wikia.com/wiki/Kyosuke_Nanbu" title="Kyosuke Nanbu">南部响介</a>，并能够感受到自己和艾克塞琳存在着某些关联，这是因为她其实是艾克塞琳的克隆。她的个性和艾克塞琳很像，很爱玩，爱开玩笑。然而，她却对坚定地忠于原生种，直到响介和艾克塞琳说服她加入，帮助他们，并一起展望他们的未来。阿露菲米时常会说一些让人听不懂的话，她也没有形成一个完整的世界观。</p>
 <p>在与原生种的最终决战中，响介和艾克塞琳成功策反了阿露菲米。然而阿露菲米无法离开魂之座而生存，所以在原生种头目被击败后，她只能和其他原生种一起毁灭。这促使了艾克塞琳以后和响介生孩子的想法，她说想要一对女双胞胎，其中一个叫雷蒙；当要说另一个时，响介成功猜到了她会取名阿露菲米。</p>
-<p>但是阿露菲米的内心比任何人想象的都强大。凭借强烈的求生欲，她找到了漂浮在太空中的<a href="/wiki/Axel_Almer" title="Axel Almer">阿克塞尔-阿鲁玛</a> and merged with his soul, until she was able to regenerate her body. As the Jetzt emerged, Alfimi recreated the Personlichkeit and rejoined the battle to put them down. After the battle with the Shura, Alfimi decided to stay with Axel. Shortly afterwards, she was attacked by a mysterious creature, and the two of them end up in the Endless Frontier, where they encountered <a href="/wiki/Haken_Browning" title="Haken Browning">Haken Browning</a> and his group, more Shura, and the remnants of the Einst.
-</p><p>With the help of <a href="/wiki/Kouta_Azuma?action=edit&amp;redlink=1" class="new" title="Kouta Azuma (page does not exist)">Kouta Azuma</a>, Alfimi and Axel managed to make it back to Earth, where she was targeted by Duvan Org, who wished to assimilate Alfimi and the Personlichkeit unto the Jetzt core that powered his Alles Geist.
+<p>但是阿露菲米的内心比任何人想象的都强大。凭借强烈的求生欲，她找到了漂浮在太空中的<a href="http://superrobotwars.wikia.com/wiki/Axel_Almer" title="Axel Almer">阿克塞尔-阿鲁玛</a>，与他的灵魂融合，以便能够重建她自己的身体。As the Jetzt emerged, Alfimi recreated the Personlichkeit and rejoined the battle to put them down. After the battle with the Shura, Alfimi decided to stay with Axel. Shortly afterwards, she was attacked by a mysterious creature, and the two of them end up in the Endless Frontier, where they encountered <a href="http://superrobotwars.wikia.com/wiki/Haken_Browning" title="Haken Browning">Haken Browning</a> and his group, more Shura, and the remnants of the Einst.
+</p><p>With the help of <a href="http://superrobotwars.wikia.com/wiki/Kouta_Azuma?action=edit&amp;redlink=1" class="new" title="Kouta Azuma (page does not exist)">Kouta Azuma</a>, Alfimi and Axel managed to make it back to Earth, where she was targeted by Duvan Org, who wished to assimilate Alfimi and the Personlichkeit unto the Jetzt core that powered his Alles Geist.
 </p>
 <!--
 NewPP limit report
